[package]
name = "posixutils-sys"
version = "0.7.0"
authors = ["Jeff Garzik"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
plib = { path = "../plib" }
clap.workspace = true
errno.workspace = true
gettext-rs.workspace = true
uname = "0.1"
libc.workspace = true
chrono.workspace = true

[lints]
workspace = true

[[bin]]
name = "getconf"
path = "./getconf.rs"

[[bin]]
name = "ipcrm"
path = "./ipcrm.rs"

[[bin]]
name = "ipcs"
path = "./ipcs.rs"

[[bin]]
name = "ps"
path = "./ps.rs"

[[bin]]
name = "uname"
path = "./uname.rs"

[[bin]]
name = "who"
path = "./who.rs"

